     access to buffered I/O rather than calling the I/O layer
     callbacks directly.

   - all core file handlers now check for error on close.

   - Backward compatibility: if you hava custom file handlers, you can
     use i_io_write() etc since they're available as macros in older
     versions of Imager.

   - eliminate the final remnants of io_glue_commit_types().

 - removed the long unused i_gen_reader() and i_gen_writer() utility
   functions.

Imager 0.86
===========

 - add simple tests for the Imager::Test test_image generators

Imager 0.85 - 29 Aug 2011
===========

The main changes in the release versus 0.84 are:

 - on 64-bit systems, 64-bit types are consistently used for image
   dimensions and co-ordinated, and for memory block sizes.

 - handle IFD loops in TIFF files correctly.  Previously this would
   lead to an infinite loop.

Bug fixes:

 - fix the link in the getheight() entry in the method index

Imager 0.84_02 - 22 Aug 2011
==============

Development release, this will become 0.85 if CPAN testers is
favourable.

Bug fixes:

 - the image file limits set by set_file_limits() weren't being
   checked when reading TIFF files.
   https://rt.cpan.org/Ticket/Display.html?id=69915

 - Provide more information about file format module load errors on a
   failed image file read() or write().
   https://rt.cpan.org/Ticket/Display.html?id=69194

 - use TIFFReadDirectory() instead of TIFFSetDirectory() to iterate
   through TIFF images, since it checks for IFD loops.
   https://rt.cpan.org/Ticket/Display.html?id=69914

 - don't leak memory when out of range palette indexes are supplied to
   setscanline().
   https://rt.cpan.org/Ticket/Display.html?id=69242

 - require a later version of CPAN::Meta to ensure JSON::PP and
   CPAN::Meta::YAML are available.
   https://rt.cpan.org/Ticket/Display.html?id=69008

 - hoist the per-line calculations for the flines implementations, and
   modernize the tests a bit.